<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:scrollbars="none"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/pink_circle"
                android:clickable="false"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/edit_first_name"
                style="@style/ProfileViewStyleNonEditable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/edit_last_name"
                style="@style/ProfileViewStyleNonEditable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/edit_email"
                style="@style/ProfileViewStyleNonEditable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/edit_DOB"
                style="@style/ProfileViewStyleNonEditable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_date_range_black_24dp"
                android:hint="@string/date_of_birth"
                android:drawableRight="@drawable/ic_date_range_black_24dp" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/text_view_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/gender" />

        <RadioGroup
            android:id="@+id/radio_group_gender"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_button_male"
                style="@style/ProfileViewStyleNonEditable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/male"
                android:layout_marginRight="20dp" />

            <RadioButton
                android:id="@+id/radio_button_female"
                style="@style/ProfileViewStyleNonEditable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />

        </RadioGroup>

        <CheckBox
            android:id="@+id/check_box_active"
            style="@style/ProfileViewStyleNonEditable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="15dp"
            android:text="@string/active" />

    </LinearLayout>

</ScrollView>

